CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
project(cmake_and_cuda LANGUAGES CXX CUDA)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 10.2 REQUIRED)
message("Debug ${TORCH_INCLUDE_DIRS}")

FILE(GLOB src-cuda *.cu)

#set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS}" "-DCUDA_HAS_FP16=1 -D__CUDA_NO_HALF_OPERATORS__ -D__CUDA_NO_HALF_CONVERSIONS__ -D__CUDA_NO_HALF2_OPERATORS__")


MESSAGE(STATUS "got cuda version " ${CUDA_VERSION})
include_directories(bnn ${TORCH_INCLUDE_DIRS})
add_library(bnn ${src-cuda}) 
target_compile_options(bnn PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
	-DCUDA_HAS_FP16=1
	-D__CUDA_NO_HALF_OPERATORS__ 
	-D__CUDA_NO_HALF_CONVERSIONS__
	-D__CUDA_NO_HALF2_OPERATORS__
>)
